<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingTop="50dp"
    android:paddingRight="15dp"
    android:paddingBottom="15dp"
    android:background="@color/mainColor">

<!--    <TextView-->
<!--        android:id="@+id/textView2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Tráng miệng"-->
<!--        android:gravity="center"-->
<!--        android:textSize="30sp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:layout_marginTop="10dp"/>-->

    <!-- Num 1-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/image_desserts_1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/banh_duaws"
            android:scaleType="centerCrop"
            android:src="@drawable/banh_duaws" />

        <CheckBox
            android:id="@+id/checkbox_desserts_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:padding="15dp"
            android:text="@string/banh_duaws" />
    </LinearLayout>

    <!-- Num 2-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/image_desserts_2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/banh_kep"
            android:scaleType="centerCrop"
            android:src="@drawable/banh_kep" />

        <CheckBox
            android:id="@+id/checkbox_desserts_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:padding="15dp"
            android:text="@string/banh_kep" />
    </LinearLayout>

    <!-- Num 3-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/image_desserts_3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/banh_tart"
            android:scaleType="centerCrop"
            android:src="@drawable/banh_tart" />

        <CheckBox
            android:id="@+id/checkbox_desserts_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:padding="15dp"
            android:text="@string/banh_tart" />
    </LinearLayout>

    <!-- Num 4-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/image_desserts_4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/bingsu_xoai"
            android:scaleType="centerCrop"
            android:src="@drawable/bingsu_xoai" />

        <CheckBox
            android:id="@+id/checkbox_desserts_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:padding="15dp"
            android:text="@string/bingsu_xoai" />
    </LinearLayout>

    <!-- Num 5-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/image_desserts_5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/mochi"
            android:scaleType="centerCrop"
            android:src="@drawable/mochi" />

        <CheckBox
            android:id="@+id/checkbox_desserts_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:padding="15dp"
            android:text="@string/mochi" />
    </LinearLayout>

    <!-- Num 6-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/image_desserts_6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/panna_cotta"
            android:scaleType="centerCrop"
            android:src="@drawable/panna_cotta" />

        <CheckBox
            android:id="@+id/checkbox_desserts_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:padding="15dp"
            android:text="@string/panna_cotta" />
    </LinearLayout>

    <!-- Num 7-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/image_desserts_7"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/tiramisu"
            android:scaleType="centerCrop"
            android:src="@drawable/tiramisu" />

        <CheckBox
            android:id="@+id/checkbox_desserts_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:padding="15dp"
            android:text="@string/tiramisu" />
    </LinearLayout>

    <!-- Num 8-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/image_desserts_8"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/trai_cay"
            android:scaleType="centerCrop"
            android:src="@drawable/trai_cay" />

        <CheckBox
            android:id="@+id/checkbox_desserts_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:padding="15dp"
            android:text="@string/trai_cay" />
    </LinearLayout>


    <Button
        android:id="@+id/button_next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="30dp"
        android:background="@color/btnColor"
        android:text="@string/viewListBtn"
        android:textSize="20sp" />

</LinearLayout>